added triplecanopy and other

--- a/explore.html
+++ b/explore.html
@@ -16,8 +16,8 @@
   <!-- Style block for project-specific colors -->
   <style>
     :root {
-      --background-color: #0e0e0e;
-      --text-color: #ffffff;
+      --background-color: rgb(0, 0, 0);
+      --text-color: #cdcdcd;
     }
   </style>
 
@@ -49,19 +49,25 @@
 
  <!-- MASONRY GRID -->
 <div class="masonry">
-    <div class="column">
-      <img src="assets/img/Explore/Google_AI_Studio_2025-10-12T13_30_59.584Z.png" alt="">
+   <div class="column">
+      <img src="assets/img/Explore/Touchdesigner-1.gif" alt="">
     </div>
+
     <div class="column">
-      <img src="assets/img/Explore/Color-1.png" alt="">
-       <img src="assets/img/Explore/Screenshot 2025-10-21 at 2.37.50 PM.png" alt="">
+      <img src="assets/img/Explore/Google-AI-Studio.png" alt="">
+      <img src="assets/img/Explore/RunwayML.gif" alt="">
     </div>
+
     <div class="column">
-      <img src="assets/img/Explore/Little me loved watching music videos while my mother fed me. Everyday my mother would put on that one joyful music video and my eyes were glued onto the bright screen. It was the only way my moth.mp4" alt="">
+      <img class="img-fill" src="assets/img/Explore/Adobe-aero.gif" alt="full width visual"/>
+      <img src="assets/img/Explore/2.png" alt="">
     </div>
+
     <div class="column">
-      <img src="assets/img/Explore/5. Doesn’t exist there.mp4" alt=""></video>
+      <img src="assets/img/Explore/Lens-Studio.gif" alt="">
+      <img src="assets/img/Explore/1.png" alt=""></video>
     </div>
+
   </div>
 <!-- END MASONRY GRID -->
 
