--- a/work.html
+++ b/work.html
@@ -76,19 +76,11 @@
 
 
   <div class="card-container"> 
-      <a href="nike.html" class="card" data-category="branding" aria-label="nike project">
-        <img src="assets/img/Work/Nike.png" alt="nike">
-        <div class="card-content" style="background: rgba(0, 0, 0, 0.9); color: #F68C50;">
-          <h3>activeforever NIKE campiagn</h3>
-          <h6>Campaign Strategy | Digital Ads</h6>
-        </div>
-      </a>
-
-      <a href="thoughts.html" class="card" data-category="branding" aria-label="klenvor project">
-        <img src="assets/img/Work/Thoughts.png" alt="Thoughts">
-        <div class="card-content" style="background: #403423e6; color: #EDCD9E;">
-         <h3>thoughts?</h3>
-          <h6>UI/UX | Social media website</h6>
+      <a href="triplecanopy.html" class="card" data-category="branding" aria-label="nike project">
+        <img src="assets/img/Work/triplecanopy.png" alt="triple canopy symposium 2025">
+        <div class="card-content" style="background: rgba(51, 46, 45, 0.9); color: #F3F0E9;">
+          <h3>triple canopy symposium 2025</h3>
+          <h6>Event Identity Design | Brand collateral | Generative </h6>
         </div>
       </a>
 
@@ -97,6 +89,23 @@
         <div class="card-content" style="background: rgba(0, 0, 0, 0.9); color: #F968B2;">
           <h3>togedoo</h3>
           <h6>UI/UX | Social media platform</h6>
+        </div>
+      </a>
+
+      
+      <a href="thoughts.html" class="card" data-category="branding" aria-label="klenvor project">
+        <img src="assets/img/Work/Thoughts.png" alt="Thoughts">
+        <div class="card-content" style="background: #403423e6; color: #EDCD9E;">
+         <h3>thoughts?</h3>
+          <h6>UI/UX | Social media website</h6>
+        </div>
+      </a>
+
+      <a href="nike.html" class="card" data-category="branding" aria-label="nike project">
+        <img src="assets/img/Work/Nike.png" alt="nike">
+        <div class="card-content" style="background: rgba(0, 0, 0, 0.9); color: #F68C50;">
+          <h3>activeforever NIKE campiagn</h3>
+          <h6>Brand Repositioning Strategy | Campaign Strategy | Content</h6>
         </div>
       </a>
 
