--- a/youshouldbehair.html
+++ b/youshouldbehair.html
@@ -52,7 +52,7 @@
       </div>
       <ul class="nav-menu">
         <li class="nav-item"> <a href="work.html" class="nav-link">work</a> </li>
-        <li class="nav-item"> <a href="play.html" class="nav-link">play</a> </li>
+        <li class="nav-item"> <a href="explore.html" class="nav-link">explore</a> </li>
         <li class="nav-item"> <a href="blog.html" class="nav-link">blog</a> </li>
         <li class="nav-item"> <a href="about.html" class="nav-link">about me</a> </li>
       </ul>
