Added ui component on homepage

--- a/about.html
+++ b/about.html
@@ -62,23 +62,23 @@
 <!---------- END PROJECTS SECTION ---------->
 
 <!---------- START FOOTER ---------->
-<footer class="footer">
-  <div class="footer-sections">
-    <div class="footer-section">
-      What did you find interesting? Let's connect and discuss.
+  <footer class="footer">
+    <div class="footer-sections">
+      <div class="footer-section">
+        Anything interesting? Let's connect and discuss.
+      </div>
+      <div class="footer-section">
+        <a href="mailto:twagh.design@gmail.com">
+          <i class="fa fa-envelope"></i> twagh.design@gmail.com
+        </a>
+      </div>
+      <div class="footer-section">
+        <a href="https://www.linkedin.com/in/tiyawagh/" target="_blank" rel="noopener">
+          <i class="fa fa-linkedin"></i> www.linkedin.com/in/tiyawagh/
+        </a>
+      </div>
     </div>
-    <div class="footer-section">
-      <a href="mailto:twagh.design@gmail.com">
-        <i class="fa fa-envelope"></i> twagh.design@gmail.com
-      </a>
-    </div>
-    <div class="footer-section">
-      <a href="https://www.linkedin.com/in/tiyawagh/" target="_blank" rel="noopener">
-        <i class="fa fa-linkedin"></i> www.linkedin.com/in/tiyawagh/
-      </a>
-    </div>
-  </div>
-</footer>
+  </footer>
 <!---------- END FOOTER ---------->
 
 </body>
