--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- CSS (ensure the filename matches exactly) -->
   <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/ui-components.css"/>
 
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -19,6 +20,7 @@
 
   <!-- Your app code -->
   <script src="js/script.js" defer></script>
+  <script src="js/ui-components.js" defer></script>
 </head>
 <body>
   <!-- Custom cursor -->
@@ -52,7 +54,7 @@
   <footer class="footer">
   <div class="footer-sections">
     <div class="footer-section">
-      What did you find interesting? Let's connect and discuss.
+      Anything interesting? Let's connect and discuss.
     </div>
     <div class="footer-section">
       <a href="mailto:twagh.design@gmail.com">
