--- a/nike.html
+++ b/nike.html
@@ -217,7 +217,7 @@
   <footer class="footer">
     <div class="footer-sections">
       <div class="footer-section">
-        What did you find interesting? Let's connect and discuss.
+        Anything interesting? Let's connect and discuss.
       </div>
       <div class="footer-section">
         <a href="mailto:twagh.design@gmail.com">
