--- a/klenvor.html
+++ b/klenvor.html
@@ -235,7 +235,7 @@
   <footer class="footer">
     <div class="footer-sections">
       <div class="footer-section">
-        What did you find interesting? Let's connect and discuss.
+        Anything interesting? Let's connect and discuss.
       </div>
       <div class="footer-section">
         <a href="mailto:twagh.design@gmail.com">
