--- a/explore.html
+++ b/explore.html
@@ -51,21 +51,27 @@
 <div class="masonry">
    <div class="column">
       <img src="assets/img/Explore/Touchdesigner-1.gif" alt="">
-    </div>
-
-    <div class="column">
-      <img src="assets/img/Explore/Google-AI-Studio.png" alt="">
-      <img src="assets/img/Explore/RunwayML.gif" alt="">
-    </div>
-
-    <div class="column">
-      <img class="img-fill" src="assets/img/Explore/Adobe-aero.gif" alt="full width visual"/>
+      <img src="assets/img/Explore/Lens-Studio.gif" alt="">
       <img src="assets/img/Explore/2.png" alt="">
     </div>
 
     <div class="column">
-      <img src="assets/img/Explore/Lens-Studio.gif" alt="">
-      <img src="assets/img/Explore/1.png" alt=""></video>
+      <img src="assets/img/Explore/touch-2.gif" alt="">
+      <img src="assets/img/Explore/cabvalry-2.gif" alt="">
+      <img src="assets/img/Explore/window.png" alt="">
+    </div>
+
+    <div class="column">
+      <img src="assets/img/Explore/Calvary.gif" alt="">
+      <img src="assets/img/Explore/Adobe-aero.gif" alt="full width visual"/>
+      <img src="assets/img/Explore/Adobe Express - 3-2.gif" alt="">
+    </div>
+
+    <div class="column">
+      <img src="assets/img/Explore/RunwayML.gif" alt="">
+      <img src="assets/img/Explore/1.png" alt="">
+      <img src="assets/img/Explore/color-lettering.jpg" alt="">
+      <img src="assets/img/Explore/pakadav.png" alt="">
     </div>
 
   </div>
