Added mobile warning, changed navbar, changed title

--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Portfolio - Tiya Wagh">
     <meta name="keywords" content="Tiya Wagh, Portfolio, Graphic Designer, UI/UX Designer, Branding, Marketing, Design">
     <meta name="author" content="Tiya Wagh">
-    <title>Tiya Wagh</title>
-    <link rel="stylesheet" href="css/work.css"> 
+  <title>about</title>
+  <link rel="icon" href="assets/img/Homepage/tW.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="css/work.css"> 
 
-    <link rel="stylesheet" href="assets/cursor/cursor.css">
-    <link rel="icon" href="assets/img/favicon.png" type="image">
+  <link rel="stylesheet" href="assets/cursor/cursor.css">
     <script src="assets/cursor/cursor.js" defer></script>
 </head>
 
@@ -63,6 +63,12 @@
         <li class="nav-item"> <a href="blog.html" class="nav-link">blog</a> </li>
         <li class="nav-item"> <a href="about.html" class="nav-link">about me</a> </li>
       </ul>
+      <div class="nav-social">
+        <a href="mailto:twagh.design@gmail.com" aria-label="Email"><i class="fa fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/tiyawagh/" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/tiyayaya_w/" aria-label="Instagram" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.behance.net/tiyaw" aria-label="Behance" target="_blank" rel="noopener"><i class="fa fa-behance"></i></a>
+      </div>
     </div>
   </nav>
 <!---------- END NAVIGATION BAR ---------->
@@ -96,7 +102,7 @@
       </div>
       <div class="footer-section">
         <a href="mailto:twagh.design@gmail.com">
-          <i class="fa fa-envelope"></i> twagh.design@gmail.com
+          <i class="fa fa-envelope-o"></i> twagh.design@gmail.com
         </a>
       </div>
       <div class="footer-section">
