--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Portfolio - Tiya Wagh">
     <meta name="keywords" content="Tiya Wagh, Portfolio, Graphic Designer, UI/UX Designer, Branding, Marketing, Design">
     <meta name="author" content="Tiya Wagh">
-    <title>Tiya Wagh</title>
-    <link rel="stylesheet" href="css/work.css"> 
-    <link rel="stylesheet" href="assets/cursor/cursor.css">
-    <link rel="icon" href="assets/img/favicon.png" type="image">
+  <title>blog</title>
+  <link rel="icon" href="assets/img/Homepage/tW.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="css/work.css"> 
+  <link rel="stylesheet" href="assets/cursor/cursor.css">
     <script src="assets/cursor/cursor.js" defer></script>
 </head>
 
@@ -62,6 +62,12 @@
         <li class="nav-item"> <a href="blog.html" class="nav-link">blog</a> </li>
         <li class="nav-item"> <a href="about.html" class="nav-link">about me</a> </li>
       </ul>
+      <div class="nav-social">
+        <a href="mailto:twagh.design@gmail.com" aria-label="Email"><i class="fa fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/tiyawagh/" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/tiyayaya_w/" aria-label="Instagram" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.behance.net/tiyaw" aria-label="Behance" target="_blank" rel="noopener"><i class="fa fa-behance"></i></a>
+      </div>
     </div>
   </nav>
 <!---------- END NAVIGATION BAR ---------->
