--- a/explore.html
+++ b/explore.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Portfolio - Tiya Wagh">
     <meta name="keywords" content="Tiya Wagh, Portfolio, Graphic Designer, UI/UX Designer, Branding, Marketing, Design">
-    <meta name="author" content="Tiya Wagh">
-    <title>Tiya Wagh</title>
-    <link rel="stylesheet" href="css/work.css"> 
+  <meta name="author" content="Tiya Wagh">
+  <link rel="stylesheet" href="css/work.css"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/artwork-interactions.css">
     <link rel="stylesheet" href="assets/cursor/cursor.css">
-    <link rel="icon" href="assets/img/favicon.png" type="image">
+    <link rel="icon" href="assets/img/Homepage/tW.svg" type="image/svg+xml">
+    <title>explore</title>
     <script src="assets/cursor/cursor.js" defer></script>
+    <script src="js/artwork-interactions.js" defer></script>
 
   <!-- Style block for project-specific colors -->
   <style>
@@ -43,6 +46,12 @@
         <li class="nav-item"> <a href="blog.html" class="nav-link">blog</a> </li>
         <li class="nav-item"> <a href="about.html" class="nav-link">about me</a> </li>
       </ul>
+      <div class="nav-social">
+        <a href="mailto:twagh.design@gmail.com" aria-label="Email"><i class="fa fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/tiyawagh/" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/tiyayaya_w/" aria-label="Instagram" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.behance.net/tiyaw" aria-label="Behance" target="_blank" rel="noopener"><i class="fa fa-behance"></i></a>
+      </div>
     </div>
   </nav>
 <!---------- END NAVIGATION BAR ---------->
