--- a/nike.html
+++ b/nike.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Klenvor - Portfolio</title>
+  <title>nike</title>
   <link rel="stylesheet" href="css/project.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Style block for project-specific colors -->
   <style>
     :root {
@@ -33,6 +34,7 @@
 
   </style>
   <link rel="stylesheet" href="assets/cursor/cursor.css"/>
+  <link rel="icon" href="assets/img/Homepage/tW.svg" type="image/svg+xml">
   <script src="assets/cursor/cursor.js" defer></script>
 
 </head>
@@ -56,6 +58,12 @@
         <li class="nav-item"> <a href="blog.html" class="nav-link">blog</a> </li>
         <li class="nav-item"> <a href="about.html" class="nav-link">about me</a> </li>
       </ul>
+      <div class="nav-social">
+        <a href="mailto:twagh.design@gmail.com" aria-label="Email"><i class="fa fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/tiyawagh/" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/tiyayaya_w/" aria-label="Instagram" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.behance.net/tiyaw" aria-label="Behance" target="_blank" rel="noopener"><i class="fa fa-behance"></i></a>
+      </div>
     </div>
   </nav>
 
