edited artwork name and project description

--- a/nike.html
+++ b/nike.html
@@ -99,7 +99,7 @@
         </div>
         <div class="overview-container">
           <div class="overview-text">
-            <p>Through extensive market research and audience analysis, our team of 13 developed “Active Now, Active Forever,” a repositioning strategy and campaign that celebrated active aging. Blending humor, joy, and empowerment, we crafted visuals and storytelling that redefined Nike’s inclusivity—making movement a mindset, not an age.</p>
+            <p>Through extensive market research and audience analysis, our team of 13 developed “Active Now, Active Forever,” a repositioning strategy and campaign that celebrated active aging. Blending humor, joy, and empowerment, we crafted visuals and storytelling that redefined Nike’s inclusivity—making movement a mindset, not an age.<br> <br> Credits: Team of 13: Ved Patil, Navdha Sharma, Samidha Wadile, Chandana S, Sriya Reddy, Eesha Rayal, Poorva Jhambulkar, Katyayani Kusuma, Fidal T, Mariya Sadabar, Purvaja barde, Sharayu Shinde, Aryaman Bhagade, Prerana Top, Salma A Vahid, Tiya Wagh | Role: Research, Strategy, Visual Design, Post production video editing | Tools: Figma, Adobe Photoshop, Adobe Illustrator, Adobe Premiere Pro </p>
           </div>
         </div>
       </div>
