--- a/triplecanopy.html
+++ b/triplecanopy.html
@@ -91,16 +91,16 @@
           </div>
         </div>
       </div>
-      <div class="content-container">z
+      <div class="content-container">
         <div class="date-text"><p>Mar 2025</p></div>
         <div class="question-container">
           <div class="question-text">
-            <p>how might we design an identity that embodies the convergence of physical presence and digital thought for Triple Canopy’s annual symposium?</p>
+            <p>how can a symposium’s identity embody the fluid exchange of art, critique, and conversation across digital and physical worlds?</p>
           </div>
         </div>
         <div class="overview-container">
           <div class="overview-text">
-            <p>Triple Canopy, an online art magazine known for its interdisciplinary approach to art, literature, and culture, hosted its annual symposium with a theme centered on the convergence of physical presence and digital thought. For this, I designed an identity that translated these abstract ideas into a cohesive visual language, where glitch effects symbolized transformation, CMYK overlays created layered depth, and pixelated waveforms conveyed digital motion. The result was a dynamic identity system that fused analog texture with pixel precision, embodying the symposium’s spirit of fluidity and dialogue between the physical and digital realms.</p>
+            <p>Triple Canopy, is a New York–based art magazine that collaborates with artists and writers to address critical issues shaping contemporary life. For their 2025 symposium, I designed an identity centered on the idea of transformation from digital to physical relams. The visual concept explored glitch and fluidity as metaphors for exchange and evolution, framing glitch not as error but as potential. Through offset misalignments in print, digital noise patterns, and flowing waveforms, the system embodies a sense of motion, continuity, and the ever-shifting dialogue between the digital and physical realms.</p>
           </div>
         </div>
       </div>
