added emerging tech

--- a/work.html
+++ b/work.html
@@ -81,6 +81,7 @@
     <button class="tab active" data-filter="all" type="button">All</button>
     <button class="tab" data-filter="branding" type="button">Branding</button>
     <button class="tab" data-filter="ui/ux" type="button">UI/UX</button>
+    <button class="tab" data-filter="emerging tech" type="button">Emerging Tech</button>
   </div>
 
   <div class="card-container"> 
@@ -92,13 +93,30 @@
         </div>
       </a>
 
-      <a href="togedoo.html" class="card" data-category="ui/ux" aria-label="togedoo project">
+      <a href="ustakala.html" class="card" data-category="emerging tech" aria-label="ustakala project">
+        <img src="assets/img/Work/Ustakala.gif" alt="ustakala">
+        <div class="card-content" style="background: rgba(38, 15, 18, 0.9); color: #FACA77;">
+          <h3>ustakala on modern products</h3>
+          <h6>AI workflow | Generative AI</h6>
+        </div>
+      </a>
+
+       <a href="https://tiyaw.github.io/print-digital/" class="card" data-category="emerging tech" aria-label="thoughts project">
+        <img src="assets/img/Work/Print&digital.gif" alt="Print & Digital AR Filters">
+        <div class="card-content" style="background: #f9f4eee6; color: #484747;">
+         <h3>print & digital AR Filters</h3>
+          <h6>creative coding | AR | p5.js</h6>
+        </div>
+      </a>
+
+       <a href="togedoo.html" class="card" data-category="ui/ux" aria-label="togedoo project">
         <img src="assets/img/Work/Togedoo.png" alt="togedoo">
         <div class="card-content" style="background: rgba(0, 0, 0, 0.9); color: #F968B2;">
           <h3>togedoo</h3>
           <h6>UI/UX | Social media platform</h6>
         </div>
       </a>
+
 
       <a href="thoughts.html" class="card" data-category="ui/ux" aria-label="thoughts project">
         <img src="assets/img/Work/Thoughts.png" alt="Thoughts">
