Added videos in nike, boardgame, ping pong

--- a/boardgame.html
+++ b/boardgame.html
@@ -73,7 +73,7 @@
 
     <!-- HERO IMAGE -->
     <div class="hero-image">
-      <img class="img-fill" src="assets/img/Projects/Boardgames/Hero-image.png" alt="Boardgames hero image"/>
+      <img class="img-fill" src="assets/img/Projects/Boardgames/Hero-image.gif" alt="Boardgames hero image"/>
     </div>
 
     <!-- PROJECT DETAILS -->
