--- a/explore.html
+++ b/explore.html
@@ -72,6 +72,7 @@
 
     <div class="column">
       <img src="assets/img/Explore/Calvary.gif" alt="">
+      <video src="assets/img/Explore/Ping pong motion graphics.mp4" autoplay muted loop controls playsinline style="width:100%; height:auto;"></video>      
       <img src="assets/img/Explore/Adobe-aero.gif" alt="full width visual"/>
       <img src="assets/img/Explore/Adobe Express - 3-2.gif" alt="">
     </div>
@@ -82,6 +83,7 @@
       <img src="assets/img/Explore/color-lettering.jpg" alt="">
       <img src="assets/img/Explore/pakadav.png" alt="">
     </div>
+</div>
 
   </div>
 <!-- END MASONRY GRID -->
