--- a/nike.html
+++ b/nike.html
@@ -86,7 +86,7 @@
         </div>
         <div class="discipline-container">
           <div class="discipline-text">
-            <p>Campaign Strategy |  Digital Ads</p>
+            <p>Brand Repositioning Strategy | Campaign design | Video production</p>
           </div>
         </div>
       </div>
@@ -119,7 +119,24 @@
      <div class="full-width-image">
         <img class="img-fill" src="assets/img/Projects/Nike/Nike-6.png" alt="Nike aspect ratio visual"/>
       </div>
-    </div>
+
+   <div class="full-width-image">
+     <iframe
+       src="https://www.youtube.com/embed/_wGMx1LolZM"
+       title="YouTube video"
+       frameborder="0"
+       allowfullscreen>
+     </iframe>
+   </div>
+   <div class="full-width-image">
+     <iframe
+       src="https://www.youtube.com/embed/9oY_J06ufV8"
+       title="YouTube video"
+       frameborder="0"
+       allowfullscreen>
+     </iframe>
+   </div>
+  </div>
 
     <!-- BEHIND THE SCENES -->
     <div class="bts-container">
