--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
         <img src="assets/img/Work/Nike.png" alt="nike">
         <div class="card-content" style="background: rgba(0, 0, 0, 0.9); color: #F68C50;">
           <h3>activeforever NIKE campiagn</h3>
-          <h6>Brand Repositioning Strategy | Campaign Strategy </h6>
+          <h6>Brand Repositioning Strategy | Campaign Design | Video production </h6>
         </div>
       </a>
 
@@ -160,7 +160,7 @@
       </a>
 
       <a href="boardgame.html" class="card" data-category="ui/ux" aria-label="boardgame project">
-          <img src="assets/img/Work/Boardgame.png" alt="Board game">
+          <img src="assets/img/Work/boardgame.gif" alt="Board game">
           <div class="card-content" style="background: rgba(31, 30, 57, 0.9); color: #ffffff;">
             <h3>marketing of board games</h3>
           <h6>UX Research | Systems design thinking</h6>
