Fixed about me nav bar

--- a/ustakala.html
+++ b/ustakala.html
@@ -149,7 +149,7 @@
                   <div class="bts-text">
                     <li>
                       <span class="bts-number">1. understanding the bias<br></span>
-                      <span class="bts-description">Began by understanding how AI models are trained and why they might not recognize niche or culturally specific terms like "ustakala". </span>
+                      <span class="bts-description">Began by understanding how AI models are trained and why they might not recognize niche or culturally specific terms like 'ustakala'. </span>
                     </li>
                   </div>
                   <div class="bts-images">
@@ -162,7 +162,9 @@
                 <div class="bts-item">
                   <div class="bts-text">
                     <li>
-                      <span class="bts-number">2. learned model training practically and theoretically<br></span>
+                      <span class="bts-number">2. learning model training practically and theoretically<br></span>
+                      <span class="bts-description">Trained ustakala Invoke AI model with 20 images of ustakala</span>
+
                       <span class="bts-description"></span>
                     </li>
                   </div>
@@ -176,7 +178,7 @@
                 <div class="bts-item">
                   <div class="bts-text">
                     <li>
-                      <span class="bts-number">3. intial generations<br></span>
+                      <span class="bts-number">3. initial generations<br></span>
                   </div>
                   <div class="bts-images">
                     <div class="bts-image">
