--- a/about.html
+++ b/about.html
@@ -7,19 +7,21 @@
     <meta name="description" content="Portfolio - Tiya Wagh">
     <meta name="keywords" content="Tiya Wagh, Portfolio, Graphic Designer, UI/UX Designer, Branding, Marketing, Design">
     <meta name="author" content="Tiya Wagh">
-  <title>about</title>
-  <link rel="icon" href="assets/img/Homepage/tW.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="css/work.css"> 
-
+    <title>work</title>
+    <link rel="stylesheet" href="css/work.css"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/cursor/cursor.css">
+    <link rel="icon" href="assets/img/Homepage/tW.svg" type="image/svg+xml">
     <script src="assets/cursor/cursor.js" defer></script>
-</head>
 
-<!-- Style block for project-specific colors -->
+   <!-- Style block for project-specific colors -->
   <style>
     :root {
       --background-color: #f6f6f6;
       --text-color: #4f4c4c;
+      /* ensure nav icons and links follow the page text/logo color */
+      --nav-icon-color: var(--text-color);
+      --nav-link-color: var(--text-color);
     }
    /* Force the navbar logo to inherit the project color (--primary-text-color).
        Hide the inline image and use the anchor as a masked element to paint the logo. */
@@ -64,7 +66,7 @@
         <li class="nav-item"> <a href="about.html" class="nav-link">about me</a> </li>
       </ul>
       <div class="nav-social">
-        <a href="mailto:twagh.design@gmail.com" aria-label="Email"><i class="fa fa-envelope"></i></a>
+        <a href="mailto:twagh.design@gmail.com" aria-label="Email"><i class="fa fa-envelope "></i></a>
         <a href="https://www.linkedin.com/in/tiyawagh/" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a>
         <a href="https://www.instagram.com/tiyayaya_w/" aria-label="Instagram" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a>
         <a href="https://www.behance.net/tiyaw" aria-label="Behance" target="_blank" rel="noopener"><i class="fa fa-behance"></i></a>
