Added On track insta link

--- a/work.html
+++ b/work.html
@@ -134,7 +134,7 @@
         </div>
       </a>
 
-      <a class="card" data-category="branding" aria-label="coming soon">
+      <a href="https://www.instagram.com/p/DQXDeV2jfd6/?img_index=1" class="card" data-category="branding" aria-label="coming soon">
         <img src="assets/img/Work/On-track.gif" alt="on track">
         <div class="card-content" style="background: rgba(29, 123, 206, 0.9); color: #ffffff;">
           <h1>(COMING SOON...)</h1>
