Added on track and fixed boardgame hero

--- a/boardgame.html
+++ b/boardgame.html
@@ -75,6 +75,7 @@
     <div class="hero-image">
       <img class="img-fill" src="assets/img/Projects/Boardgames/Hero-image.gif" alt="Boardgames hero image"/>
     </div>
+    <div> </div>
 
     <!-- PROJECT DETAILS -->
     <div class="project-details">
