--- a/work.html
+++ b/work.html
@@ -134,10 +134,9 @@
         </div>
       </a>
 
-      <a href="https://www.instagram.com/p/DQXDeV2jfd6/?img_index=1" class="card" data-category="branding" aria-label="coming soon">
+      <a href="ontrack.html" class="card" data-category="branding" aria-label="coming soon">
         <img src="assets/img/Work/On-track.gif" alt="on track">
-        <div class="card-content" style="background: rgba(29, 123, 206, 0.9); color: #ffffff;">
-          <h1>(COMING SOON...)</h1>
+        <div class="card-content" style="background: rgba(25, 55, 68, 0.9); color: #FACA77;">
           <h3>on track</h3>
           <h6>Branding | Campaign | Systems design </h6>
         </div>
